<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".DescripcionActivity">

        <ImageView
            android:id="@+id/imagenCurso"
            android:layout_width="370dp"
            android:layout_height="250dp"
            android:background="#E0F2F1"
            android:contentDescription="@string/contentDescripcion"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_nombreCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_requisitos"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/tv_requisitos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cost"
                android:textSize="25sp"
                android:textColor="#FFD54F"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_precio"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#FFD54F"
                android:textSize="25sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etiquetaInstructor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_nombreInstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textStyle="italic"
            android:gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/imagen_instructor"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:background="#E0F2F1"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/contentDescripcion"/>

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:isIndicator="true"
            android:numStars="5" />

        <Button
            android:id="@+id/btn_Agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btn_agregar"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>
</ScrollView>